--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.10",
     "history": "^4.7.2",
+    "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-app-rewired": "^2.0.2",
     "react-dom": "^16.7.0",
+    "react-number-format": "^4.0.7",
     "react-perfect-scrollbar": "^1.4.4",
     "react-redux": "^6.0.1",
     "react-router": "4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
