--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "2.1.3",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
+    "redux-form": "^8.2.0",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
