--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "react-dom": "^16.7.0",
     "react-number-format": "^4.0.7",
     "react-perfect-scrollbar": "^1.4.4",
-    "react-redux": "^6.0.1",
+    "react-redux": "6.0.1",
     "react-router": "4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.0",
+    "redux-form": "8.2.0",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
