--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "antd": "3.13.0",
+    "antd-form-redux": "^3.0.28",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.10",
@@ -22,8 +23,10 @@
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
     "redux-form": "8.2.0",
+    "redux-form-antd": "^3.1.9",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
+    "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "underscore.string": "^3.3.5"
   },
